--- a/src/main/resources/templates/userPage/fragmentLessonVideo/mainContentLessonVideo.html
+++ b/src/main/resources/templates/userPage/fragmentLessonVideo/mainContentLessonVideo.html
@@ -873,7 +873,7 @@
                                                         </button>
 
                                                         <!-- Tiêu đề bài -->
-                                                        <span
+                                                        <span style="margin-left: 10px;"
                                                             class="d-inline-block text-truncate ms-2 mb-0 h6 fw-light w-200px"
                                                             th:class="${lesson.lessonId == currentLessonId} ? 'fw-bold' : 'fw-light'"
                                                             th:text="${lesson.title}">Tên bài học</span>
