--- a/src/main/resources/templates/homePage/course-detail.html
+++ b/src/main/resources/templates/homePage/course-detail.html
@@ -1798,6 +1798,7 @@ Footer END -->
 	<script src="assets/vendor/glightbox/js/glightbox.js"></script>
 	<script src="assets/vendor/choices/js/choices.min.js"></script>
 	<script src="/js/homePage/addtocart.js"></script>
+	<script src="/js/homePage/wishlist.js"></script>
 	<!-- Template Functions -->
 	<script src="assets/js/functions.js"></script>
 	<script>
