--- a/src/main/resources/templates/homePage/index-2.html
+++ b/src/main/resources/templates/homePage/index-2.html
@@ -1324,6 +1324,7 @@ Footer END -->
 
 <!-- Template Functions -->
 <script src="assets/js/functions.js"></script>
+<script src="/js/homePage/wishlist.js"></script>
 
 </body>
 
