--- a/src/main/resources/templates/homePage/index-3.html
+++ b/src/main/resources/templates/homePage/index-3.html
@@ -1142,7 +1142,7 @@ Popular course START -->
 						<!-- Title -->
 						<h3>Development</h3>
 						<p class="mb-3">Ask a quick six seven offer see among. Handsome met debating sir dwelling age material. As style lived he worse dried. Offered related so visitors we private removed.</p>
-						<h6 class="mt-4">What you’ll learn</h6>
+						<h6 class="mt-4">What you'll learn</h6>
 						<ul class="list-group list-group-borderless mb-3">
 							<li class="list-group-item h6 fw-light d-flex mb-0"><i class="bi bi-patch-check-fill text-success me-2"></i>Create responsive, accessible, and beautiful layouts</li>
 							<li class="list-group-item h6 fw-light d-flex mb-0"><i class="bi bi-patch-check-fill text-success me-2"></i>Course Videos & Readings</li>
@@ -1815,6 +1815,7 @@ Footer END -->
 
 <!-- Template Functions -->
 <script src="assets/js/functions.js"></script>
+<script src="/js/homePage/wishlist.js"></script>
 
 </body>
 
