--- a/src/main/resources/templates/homePage/fragments/cardCourse.html
+++ b/src/main/resources/templates/homePage/fragments/cardCourse.html
@@ -14,7 +14,13 @@
                         <!-- Badge and favorite -->
                         <div class="d-flex justify-content-between mb-2">
                             <a href="#" class="badge bg-purple bg-opacity-10 text-purple" th:text="${course.courseLevel}">All level</a>
-                            <a href="#" class="h6 mb-0"><i class="far fa-heart"></i></a>
+                            <button type="button"
+                                    class="btn btn-link text-muted p-0 wishlist-toggle"
+                                    th:data-course-id="${course.courseId}"
+                                    th:onclick="'toggleWishlist(this, ' + ${course.courseId} + ')'"
+                                    style="font-size: 1.2rem;">
+                                <i class="far fa-heart"></i>
+                            </button>
                         </div>
                         <!-- Title -->
                         <h5 class="card-title fw-normal"><a th:href="@{'/home/course-detail?id=' + ${course.courseId}}" th:text="${course.title}">Sketch from A to Z: for
