--- a/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
+++ b/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
@@ -9,7 +9,13 @@
                     <div class="d-flex justify-content-between mb-2">
                         <a href="#" class="badge bg-purple bg-opacity-10 text-purple"
                            th:text="${course.courseLevel}">All level</a>
-                        <a href="#" class="h6 fw-light mb-0"><i class="far fa-heart"></i></a>
+                        <button type="button"
+                                class="btn btn-link wishlist-toggle p-0"
+                                th:data-course-id="${course.courseId}"
+                                th:onclick="'toggleWishlist(this, ' + ${course.courseId} + ')'"
+                                style="font-size: 1.2rem;">
+                            <i class="far fa-heart"></i>
+                        </button>
                     </div>
                     <h5 class="card-title"><a th:text="${course.title}"
                                               th:href="@{'/home/course-detail?id=' + ${course.courseId}}"></a></h5>
@@ -62,9 +68,7 @@
                         <i class="fas fa-angle-double-right"></i>
                     </a>
                 </li>
-
             </ul>
         </nav>
     </div>
-
 </div>
