--- a/src/main/resources/templates/homePage/fragments/topCourse.html
+++ b/src/main/resources/templates/homePage/fragments/topCourse.html
@@ -13,7 +13,13 @@
                            th:text="${course.category.name}">Design</a>
                         <a href="#" class="badge text-bg-dark">All level</a>
                     </span>
-                    <a href="#" class="h6 fw-light mb-0"><i class="far fa-bookmark"></i></a>
+                    <button type="button"
+                            class="btn btn-link text-muted p-0 wishlist-toggle"
+                            th:data-course-id="${course.courseId}"
+                            th:onclick="'toggleWishlist(this, ' + ${course.courseId} + ')'"
+                            style="font-size: 1.2rem;">
+                        <i class="far fa-heart"></i>
+                    </button>
                 </div>
                 <h5 class="card-title"><a href="#" th:text="${course.title}">Course Title</a></h5>
                 <div class="d-flex justify-content-between mb-2">
