--- a/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
@@ -80,15 +80,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/notifications}">
-                        <i class="fas fa-fw fa-comment"></i>
-                        <span>Notifications</span>
-                    </a>
-                </li>
-
-                <li class="nav-item">
                     <a class="nav-link" th:href="@{/admin/reports}">
-                        <i class="fas fa-fw fa-comment"></i>
+                        <i class="fas fa-exclamation-circle"></i>
                         <span>Report</span>
                     </a>
                 </li>
