--- a/src/main/resources/templates/adminDashBoard/fragments/topbar.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/topbar.html
@@ -63,106 +63,11 @@
                 <ul class="navbar-nav flex-row align-items-center">
 
                     <!-- Notification dropdown START -->
-                    <li class="nav-item ms-2 ms-md-3 dropdown">
-                        <!-- Notification button -->
-                        <a class="btn btn-light btn-round mb-0" href="#" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false" data-bs-auto-close="outside">
-                            <i class="bi bi-bell fa-fw"></i>
+                    <li class="nav-item ms-2 ms-md-3">
+                        <a class="btn btn-light btn-round mb-0 position-relative" th:href="@{/admin/notifications}" title="Notifications" style="width:48px;height:48px;">
+                            <i class="bi bi-bell fa-fw" style="font-size:2rem;line-height:48px;"></i>
+                            <span th:if="${unreadCount > 0}" class="notif-badge animation-blink" style="width:14px;height:14px;top:6px;right:6px;"></span>
                         </a>
-                        <!-- Notification dote -->
-                        <span class="notif-badge animation-blink"></span>
-
-                        <!-- Notification dropdown menu START -->
-                        <div class="dropdown-menu dropdown-animation dropdown-menu-end dropdown-menu-size-md p-0 shadow-lg border-0">
-                            <div class="card bg-transparent">
-                                <div class="card-header bg-transparent border-bottom py-4 d-flex justify-content-between align-items-center">
-                                    <h6 class="m-0">Notifications <span
-                                            class="badge bg-danger bg-opacity-10 text-danger ms-2">2 new</span></h6>
-                                    <a class="small" href="#">Clear all</a>
-                                </div>
-                                <div class="card-body p-0">
-                                    <ul class="list-group list-unstyled list-group-flush">
-                                        <!-- Notif item -->
-                                        <li>
-                                            <a href="#"
-                                               class="list-group-item-action border-0 border-bottom d-flex p-3">
-                                                <div class="me-3">
-                                                    <div class="avatar avatar-md">
-                                                        <img class="avatar-img rounded-circle"
-                                                             th:src="@{/assets/images/avatar/08.jpg}" alt="avatar">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <p class="text-body small m-0">Congratulate <b>Joan Wallace</b> for
-                                                        graduating from <b>Microverse university</b></p>
-                                                    <u class="small">Say congrats</u>
-                                                </div>
-                                            </a>
-                                        </li>
-
-                                        <!-- Notif item -->
-                                        <li>
-                                            <a href="#"
-                                               class="list-group-item-action border-0 border-bottom d-flex p-3">
-                                                <div class="me-3">
-                                                    <div class="avatar avatar-md">
-                                                        <img class="avatar-img rounded-circle"
-                                                             th:src="@{/assets/images/avatar/02.jpg}" alt="avatar">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <h6 class="mb-1">Larry Lawson Added a new course</h6>
-                                                    <p class="small text-body m-0">What's new! Find out about new
-                                                        features</p>
-                                                    <u class="small">View detail</u>
-                                                </div>
-                                            </a>
-                                        </li>
-
-                                        <!-- Notif item -->
-                                        <li>
-                                            <a href="#"
-                                               class="list-group-item-action border-0 border-bottom d-flex p-3">
-                                                <div class="me-3">
-                                                    <div class="avatar avatar-md">
-                                                        <img class="avatar-img rounded-circle"
-                                                             th:src="@{/assets/images/avatar/05.jpg}" alt="avatar">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <h6 class="mb-1">New request to apply for Instructor</h6>
-                                                    <u class="small">View detail</u>
-                                                </div>
-                                            </a>
-                                        </li>
-
-                                        <!-- Notif item -->
-                                        <li>
-                                            <a href="#"
-                                               class="list-group-item-action border-0 border-bottom d-flex p-3">
-                                                <div class="me-3">
-                                                    <div class="avatar avatar-md">
-                                                        <img class="avatar-img rounded-circle"
-                                                             th:src="@{/assets/images/avatar/03.jpg}" alt="avatar">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <h6 class="mb-1">Update v2.3 completed successfully</h6>
-                                                    <p class="small text-body m-0">What's new! Find out about new
-                                                        features</p>
-                                                    <small class="text-body">5 min ago</small>
-                                                </div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <!-- Button -->
-                                <div class="card-footer bg-transparent border-0 py-3 text-center position-relative">
-                                    <a href="#" class="stretched-link">See all incoming activity</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Notification dropdown menu END -->
                     </li>
                     <!-- Notification dropdown END -->
 
