--- a/src/main/resources/templates/userPage/fragments/navHeader.html
+++ b/src/main/resources/templates/userPage/fragments/navHeader.html
@@ -223,7 +223,7 @@
                 <!-- Nav Main menu START -->
                 <ul class="navbar-nav navbar-nav-scroll mx-auto">
 
-                    <li class="nav-item" th:each="category : ${categories}"><a class="nav-link" href="#"
+                    <li class="nav-item" th:each="category : ${categories}"><a class="nav-link" th:href="@{'/home/coursesGrid'(categoryIds=${category.id})}"
                                                                                th:text="${category.name}">Finance & Accounting</a></li>
 
 
