--- a/src/main/resources/templates/adminDashBoard/fragments/businessRuleContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/businessRuleContent.html
@@ -364,12 +364,12 @@
         }
 
         /* Modal Styles */
-        .modal-header {
+        .modal-header-rule {
             background-color: var(--sidebar-bg);
             color: white;
         }
 
-        .modal-header .btn-close {
+        .modal-header-rule .btn-close {
             filter: invert(1);
         }
 
@@ -524,7 +524,7 @@
     <div class="modal fade" id="clauseModal" tabindex="-1">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header-rule">
                     <h5 class="modal-title text-white" id="modalTitle">Add New Rule</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
@@ -563,7 +563,7 @@
     <div class="modal fade" id="editClauseModal" tabindex="-1">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header-rule">
                     <h5 class="modal-title text-white">Edit Rule</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
@@ -599,7 +599,6 @@
     </div>
 
     </body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>
     <script>
         function makeEditable(element) {
